# cs6868_s26

./: .gitignore  assignments.md  index.md  project_ideas.md  schedule.md
assignments/assignment3_batch_queue/: BatchQueue.ml  BatchQueue.mli  Makefile  README.md  dune  dune-project  qcheck_lin_batch_queue.ml  qcheck_stm_batch_queue.ml  test_manual.ml
assignments/assignment4_mutex_condvar/: Makefile  README.md  barrier.ml  barrier.mli  condition.ml  condition.mli  dune  dune-project  mutex.ml  mutex.mli  qcheck_stm_mutex.ml  semaphore.ml  semaphore.mli  test_manual.ml  test_select_stale.ml
assignments/assignment4_mutex_condvar/golike_unicore_select/: chan.ml  chan.mli  dune  ivar.ml  ivar.mli  promise.mli  sched.mli  select.ml  select.mli  trigger.ml  trigger.mli
lectures/: README.md
lectures/03_concurrent_objects/code/test/: qcheck_stm_lockfree.ml
lectures/06_monitors_and_synchronization/: 06_monitors_and_synchronization.key
lectures/07_linked_lists/: 07_linked_lists.key
lectures/07_linked_lists/code/: README.md
lectures/07_linked_lists/code/lib/: optimistic_list.ml  optimistic_list_racefree.ml  seq_list.ml
lectures/07_linked_lists/code/test/: qcheck_stm_coarse_list.ml  qcheck_stm_fine_list.ml  qcheck_stm_lazy_list.ml  qcheck_stm_lockfree_list.ml  qcheck_stm_optimistic_list.ml
lectures/08_queues_and_stacks/: 08_queues_and_stacks.key
lectures/08_queues_and_stacks/code/: README.md
lectures/08_queues_and_stacks/code/lib/: bounded_queue.ml  bounded_queue_split_counter.ml  dune  elimination_array.ml  elimination_array.mli  elimination_backoff_stack.ml  elimination_backoff_stack.mli  lockfree_exchanger.ml  lockfree_exchanger.mli  lockfree_queue.ml  lockfree_stack.ml
lectures/08_queues_and_stacks/code/test/: benchmark_queues.ml  benchmark_stacks.ml  dune  qcheck_lin_elimination_backoff_stack.ml  qcheck_lin_lockfree_queue.ml  qcheck_lin_lockfree_stack_builtin_list.ml  qcheck_stm_bounded_queue.ml  qcheck_stm_bounded_queue_split_counter.ml  qcheck_stm_elimination_backoff_stack.ml  qcheck_stm_lockfree_queue.ml  qcheck_stm_lockfree_stack.ml  qcheck_stm_lockfree_stack_builtin_list.ml  test_elimination_backoff_stack.ml  test_lockfree_queue.ml  test_lockfree_stack_builtin_list.ml
lectures/09_effect_handlers/: 09_effect_handlers.key
lectures/09_effect_handlers/code/: dune  test4.ml  test5.ml
lectures/09_effect_handlers/code/basic/: dune  effect_types.txt  exception.ml  nondeterminism.ml  reader.ml  state.ml  state_trace.md  test1.ml  test10.ml  test2.ml  test3.ml  test4_2.ml  test6.ml  test7.ml  test8.ml  test9.ml  tree_generator.ml
lectures/09_effect_handlers/code/golike_unicore/: chan.ml  chan.mli  dune  ivar.ml  ivar.mli  promise.ml  promise.mli  sched.ml  trigger.ml  trigger.mli
lectures/09_effect_handlers/code/sched_basic/: dune  sched_basic.ml  sched_basic.mli
lectures/09_effect_handlers/code/tests/: domains_vs_fibers.ml  dune  sched_test.ml
lectures/09_effect_handlers/code/tests/golike_unicore/: chan_test.ml  dune  ivar_test.ml  promise_test.ml
lectures/10_lightweight_concurrency/: 10_lightweight_concurrency.key
lectures/10_lightweight_concurrency/code/golike_multicore_select/: io.ml  sched.ml
lectures/10_lightweight_concurrency/code/tests/golike_multicore_select/: blocking_io_demo.ml  dune  fanin_test.ml  select_recv_timeout_test.ml  timeout_loop_test.ml
lectures/11_oxcaml/: 11_oxcaml.key  README.md  handout.md  test_handout.sh
lectures/11_oxcaml/code/01_modes_basics/: dune  gensym_atomic.ml  gensym_atomic_portable.ml  gensym_unsafe.ml
lectures/11_oxcaml/code/02_stack_alloc/: dune  part1_escape_return.ml  part1_escape_store.ml  part1_polyline.ml
lectures/11_oxcaml/code/03_portability_and_contention/: dune  part2_slides.ml  portability_demo.ml
lectures/11_oxcaml/code/08_capsules/: capsule_abuse.ml  dune  gensym_capsule.ml
project/: README.md  project_ideas.md
project/report-template/: README.md  main.tex  references.bib
