(library
 (name bounded_queue)
 (modules bounded_queue))

(library
 (name bounded_queue_split_counter)
 (modules bounded_queue_split_counter))

(library
 (name lockfree_queue)
 (modules lockfree_queue))

(library
 (name lockfree_stack)
 (modules lockfree_stack))

(library
 (name lockfree_stack_builtin_list)
 (modules lockfree_stack_builtin_list))
