(library
 (name bounded_queue)
 (modules bounded_queue))

(library
 (name bounded_queue_split_counter)
 (modules bounded_queue_split_counter))

(library
 (name lockfree_queue)
 (modules lockfree_queue))

(library
 (name lockfree_stack)
 (modules lockfree_stack))

(library
 (name lockfree_stack_builtin_list)
 (modules lockfree_stack_builtin_list))

(library
 (name lockfree_exchanger)
 (modules lockfree_exchanger))

(library
 (name elimination_array)
 (modules elimination_array)
 (libraries lockfree_exchanger))

(library
 (name elimination_backoff_stack)
 (modules elimination_backoff_stack)
 (libraries elimination_array))
